# ol-rag-pipeline-core

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/ol_rag_pipeline_core/: __init__.py  chunking.py  config.py  db.py  embedding.py  events.py  html_head.py  models.py  nats_publisher.py  qdrant.py  routing.py  util.py  validation.py  vpn.py
src/ol_rag_pipeline_core/calibre/: __init__.py  export.py
src/ol_rag_pipeline_core/extractors/: __init__.py  basic.py
src/ol_rag_pipeline_core/migrations/: runner.py
src/ol_rag_pipeline_core/migrations/sql/: 0001_init.sql  0002_enrichments.sql
src/ol_rag_pipeline_core/ocr/: __init__.py  client.py  ensemble.py  pdf_render.py  quality.py
src/ol_rag_pipeline_core/repositories/: __init__.py  chunks.py  documents.py  enrichments.py  extractions.py  files.py  ocr.py  review_queue.py  runs.py
src/ol_rag_pipeline_core/sources/: archive_org.py  newadvent_web.py  newadvent_zip.py  nextcloud.py  vatican_sqlite.py
src/ol_rag_pipeline_core/storage/: s3.py
tests/: conftest.py  test_archive_org.py  test_calibre_export.py  test_chunking.py  test_chunking_pages.py  test_db.py  test_events.py  test_extractors_basic.py  test_html_head.py  test_migrations.py  test_newadvent_zip_source.py  test_ocr_quality.py  test_repositories.py  test_settings.py  test_util.py  test_validation.py  test_vatican_sqlite_hosts.py  test_vpn_guard.py
